# farsava-c-client

./: CMakeLists.txt  README.md
api/: LanguageModelAPI.c  LanguageModelAPI.h  SpeechAPI.c  SpeechAPI.h  VoiceAPI.c  VoiceAPI.h
include/: apiClient.h
model/: asr_request_body_data.c  asr_request_body_data.h  asr_request_body_uri.c  asr_request_body_uri.h  asr_response_body.c  asr_response_body.h  asr_status.c  asr_status.h  audio_encoding.c  audio_encoding.h  error.c  error.h  health_check_response_body.c  health_check_response_body.h  language_code.c  language_code.h  language_model_result.c  language_model_result.h  language_model_train_request_body.c  language_model_train_request_body.h  lm_status.c  lm_status.h  recognition_audio_data.c  recognition_audio_data.h  recognition_audio_uri.c  recognition_audio_uri.h  recognition_config.c  recognition_config.h  speech_recognition_model.c  speech_recognition_model.h  speech_recognition_result.c  speech_recognition_result.h  synthesis_input.c  synthesis_input.h  tts_audio_config.c  tts_audio_config.h  tts_request_body.c  tts_request_body.h  tts_response_body.c  tts_response_body.h  (+6 more)
src/: apiClient.c
